replace miscellaneous category for thoughts

--- a/content/posts/2014-12-23-.md
+++ b/content/posts/2014-12-23-.md
@@ -3,7 +3,7 @@ title : "Surprising Events"
 author : "Obed Marquez Parlapiano"
 date : "2014-12-23"
 categories : 
- - miscellaneous
+ - thoughts
 tags : ""
 ---
 
