--- a/content/posts/2014-12-30-2014-in-review.md
+++ b/content/posts/2014-12-30-2014-in-review.md
@@ -3,7 +3,7 @@ title : "2014 in review"
 author : "Obed Marquez Parlapiano"
 date : "2014-12-30"
 categories : 
- - miscellaneous
+ - thoughts
 tags : ""
 ---
 
