--- a/content/posts/2015-04-09-.md
+++ b/content/posts/2015-04-09-.md
@@ -3,7 +3,7 @@ title : "Why I Believe People That Never Leave Reviews At Amazon Are Assholes."
 author : "Obed Marquez Parlapiano"
 date : "2015-04-09"
 categories : 
- - miscellaneous
+ - thoughts
 tags : ""
 ---
 
