--- a/content/posts/2015-05-09-.md
+++ b/content/posts/2015-05-09-.md
@@ -3,7 +3,7 @@ title : "How To Be Happy. And Why No One Is Happy.w"
 author : "Obed Marquez Parlapiano"
 date : "2015-05-09"
 categories : 
- - miscellaneous
+ - thoughts
 tags : ""
 ---
 
