--- a/content/posts/2015-09-27-.md
+++ b/content/posts/2015-09-27-.md
@@ -3,7 +3,7 @@ title : "What Is Love? Baby I Have No Idea."
 author : "Obed Marquez Parlapiano"
 date : "2015-09-27"
 categories : 
- - miscellaneous
+ - thoughts
 tags : ""
 ---
 
