--- a/content/posts/2015-10-19-.md
+++ b/content/posts/2015-10-19-.md
@@ -3,7 +3,7 @@ title : "Living more life"
 author : "Obed Marquez Parlapiano"
 date : "2015-10-19"
 categories : 
- - miscellaneous
+ - thoughts
 tags : ""
 ---
 
