--- a/content/posts/2017-01-12-oh-well-640am.md
+++ b/content/posts/2017-01-12-oh-well-640am.md
@@ -3,7 +3,7 @@ title : "Oh well, it's 6:40am you see?"
 author : "Obed Marquez Parlapiano"
 date : "2017-01-12"
 categories : 
- - miscellaneous
+ - thoughts
 tags : ""
 ---
 
