--- a/content/posts/2014-07-07-miedo.md
+++ b/content/posts/2014-07-07-miedo.md
@@ -3,7 +3,7 @@ title : "Miedo."
 author : "Obed Marquez Parlapiano"
 date : "2014-07-07"
 categories : 
- - miscellaneous
+ - thoughts
 tags : ""
 ---
 
