Replace philosophy category for thoughts

--- a/content/posts/2014-04-23-.md
+++ b/content/posts/2014-04-23-.md
@@ -3,7 +3,7 @@ title : "La simpleza de lo desconocido."
 author : "Obed Marquez Parlapiano"
 date : "2014-04-23"
 categories : 
- - philosophy
+ - thoughts
 tags : ""
 ---
 
