Replace poems and short-stories for stories category

--- a/content/posts/2016-09-04-3605-2.md
+++ b/content/posts/2016-09-04-3605-2.md
@@ -3,7 +3,7 @@ title : "The Lovers and The Call. A Short Story."
 author : "Obed Marquez Parlapiano"
 date : "2016-09-04"
 categories : 
- - short-stories
+ - stories
 tags : ""
 cover : "../images/the-lovers.-the-call-e1472994525706.jpg"
 ---
