Fix single article with no category

--- a/content/posts/2016-03-07-.md
+++ b/content/posts/2016-03-07-.md
@@ -3,6 +3,7 @@ title : "On creativity."
 author : "Obed Marquez Parlapiano"
 date : "2016-03-07"
 categories : 
+ - thoughts
 tags : ""
 cover : "../images/creativity.jpg"
 ---
